# jeopardy-trainer

./: .gitignore  CMakeLists.txt  Category.cpp  Category.h  Clue.cpp  Clue.h  DbHandler.cpp  DbHandler.h  Game.cpp  Game.h  WebParser.cpp  WebParser.h  main.cpp  sql.txt
